--- a/frontend/app/templates/admin/settings.hbs
+++ b/frontend/app/templates/admin/settings.hbs
@@ -17,7 +17,7 @@
 
       {{t "admin.settings.index.ipv6_allowed"}} <kbd>2001:db8::/32</kbd>
     {{else}}
-      {{t "admin.settings.index.geo_ip_disabled"}}: <a target="_blank" rel="noopener" href="https://github.com/puzzle/cryptopus/wiki/Source-IP-filtering">Wiki</a>
+      {{t "admin.settings.index.geo_ip_disabled"}}: <a target="_blank" rel="noopener noreferrer" href="https://github.com/puzzle/cryptopus/wiki/Source-IP-filtering">Wiki</a>
     {{/if}}
   </div>
 </div>
