--- a/frontend/app/templates/components/api-user/table.hbs
+++ b/frontend/app/templates/components/api-user/table.hbs
@@ -7,7 +7,7 @@
 <div class="container my-2">
   <div class="row justify-content-end">
     <div class="col-auto">
-      <button class="btn btn-primary" {{on "click" this.createApiUser}}>{{t "new"}}</button>
+      <button class="btn btn-primary" type="button" {{on "click" this.createApiUser}}>{{t "new"}}</button>
     </div>
   </div>
 </div>
