--- a/frontend/app/templates/components/encryptable-file/row.hbs
+++ b/frontend/app/templates/components/encryptable-file/row.hbs
@@ -1,5 +1,5 @@
 <tr>
-  <td><a href={{this.downloadLink}} target="_blank" rel="noopener">{{@encryptableFile.name}}</a></td>
+  <td><a href={{this.downloadLink}} target="_blank" rel="noopener noreferrer">{{@encryptableFile.name}}</a></td>
   <td>{{@encryptableFile.description}}</td>
   <td>
     <DeleteWithConfirmation @record={{@encryptableFile}}>
