--- a/frontend/app/templates/components/profile/password-update.hbs
+++ b/frontend/app/templates/components/profile/password-update.hbs
@@ -1,5 +1,5 @@
 {{#if this.isUserAllowedToChangePassword}}
-  <button class="btn btn-primary" {{on "click" this.toggleEditing}}>{{t "helpers.label.user.managePassword"}}</button>
+  <button class="btn btn-primary" type="button" {{on "click" this.toggleEditing}}>{{t "helpers.label.user.managePassword"}}</button>
 {{/if}}
 
 {{#if this.isEditing}}
