--- a/frontend/app/templates/components/team/form.hbs
+++ b/frontend/app/templates/components/team/form.hbs
@@ -24,8 +24,8 @@
                   <BsTooltip @title={{t "teams.description.private"}} />
                 </div>
                 <div class="align-self-center mb-2 ml-2">
-                  <Input id="checkbox-private" class="" @type="checkbox" @checked={{this.changeset.private}} @name="private"
-                     disabled={{not this.isNewRecord }}/>
+                  <Input id="checkbox-private" class="" @type="checkbox" @checked={{this.changeset.private}} name="private"
+                     disabled={{not this.isNewRecord }} />
                 </div>
               </div>
             </div>
