fix first six system specs

--- a/frontend/app/templates/components/admin/user/form.hbs
+++ b/frontend/app/templates/components/admin/user/form.hbs
@@ -3,7 +3,7 @@
     <h3 class="modal-title">{{@title}}</h3>
   </Modal.header>
   <Modal.body>
-    <div class="container-fluid">
+    <div id="admin-form" class="container-fluid">
       <BsForm @model={{this.changeset}} as |form|>
         <div class="row">
           <div class="col-md-6 order-2">
