--- a/frontend/app/templates/components/delete-with-confirmation.hbs
+++ b/frontend/app/templates/components/delete-with-confirmation.hbs
@@ -11,7 +11,7 @@
     <BsButton @onClick={{this.deleteRecord}} @type="primary">{{t "delete"}}</BsButton>
   </Modal.footer>
 </BsModal>
-<div id={{this.modalId}} class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+<div id={{this.modalId}} class="modal fade" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-body">
