--- a/frontend/app/templates/components/team/show.hbs
+++ b/frontend/app/templates/components/team/show.hbs
@@ -57,7 +57,7 @@
         {{/unless}}
       </div>
 
-      <BsDropdown @class="d-sm-none mb-0 col-auto mobile-team-menu" as |dd|>
+      <BsDropdown class="d-sm-none mb-0 col-auto mobile-team-menu" as |dd|>
         <dd.toggle>
           <img class="icon-big-button" src="/assets/images/bars-white.svg" alt="v">
         </dd.toggle>
