--- a/frontend/app/templates/components/encryptable/form.hbs
+++ b/frontend/app/templates/components/encryptable/form.hbs
@@ -31,7 +31,7 @@
                                 class={{if this.changeset.error.name.validation
                                            "invalid-input-name"}}
                                 @customError={{t (validation-error-key this.changeset.error.name.validation)}} as |el|>
-                    <el.control autocomplete="off" @name="name" tabindex="1"></el.control>
+                    <el.control autocomplete="off" @name="name"></el.control>
                   </form.element>
                 </form.group>
               </div>
@@ -75,7 +75,7 @@
                               this.changeset.error.description.validation "invalid-input"}} vertical-resize"
                             customError={{t
                 (validation-error-key this.changeset.error.description.validation)}} as |el|>
-                <el.control tabindex="7"></el.control>
+                <el.control></el.control>
               </form.element>
             </form.group>
           </div>
@@ -90,7 +90,7 @@
                                     @property="cleartextCustomAttrLabel" @customError={{t
                         (validation-error-key this.changeset.error.cleartextCustomAttrLabel.validation)}} as |el|>
                         <div class="input-group">
-                          <el.control @name="label" tabindex="2"></el.control>
+                          <el.control @name="label"></el.control>
                           <span class="encrypted-icon-span">
                             {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
                             <BsTooltip @title={{t "encryptable/credentials.form.notEncryptedField"}} @delayShow="300" @viewportSelector="modal"/>
@@ -108,7 +108,7 @@
                                   @property="cleartext{{capitalize attribute}}" @customError={{t
                       (validation-error-key (get (get this.changeset.error (concat "cleartext" (capitalize attribute))) "validation"))}} as |el|>
                       <div class="input-group">
-                        <el.control autocomplete="off" @name="cleartext{{capitalize attribute}}" tabindex="2"></el.control>
+                        <el.control autocomplete="off" @name="cleartext{{capitalize attribute}}"></el.control>
                         <span class="encrypted-icon-span">
                           {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
                           <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
@@ -127,7 +127,7 @@
                     <PasswordStrengthMeter class="col-12 col-lg-9 px-0 mb-2 mb-md-0 ml-3"
                                            @password={{this.changeset.cleartextPassword}}/>
                     <div></div>
-                    <button class="btn btn-secondary btn-block col-lg-7 mb-md-4 ml-3 mt-2" tabindex="4" type="button" {{on "click"
+                    <button class="btn btn-secondary btn-block col-lg-7 mb-md-4 ml-3 mt-2" type="button" {{on "click"
                                                                                                 this.setRandomPassword}}>
                       {{t "encryptable/credentials.edit.random_password"}}
                     </button>
