--- a/frontend/app/templates/components/fallback-info.hbs
+++ b/frontend/app/templates/components/fallback-info.hbs
@@ -1,3 +1,3 @@
-{{#if fallbackInfo}}
-  <div class="fallback-info-banner">{{fallbackInfo}}</div>
+{{#if this.fallbackInfo}}
+  <div class="fallback-info-banner">{{this.fallbackInfo}}</div>
 {{/if}}
