fix routing bug in profiles

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -84,11 +84,11 @@
           Admin
         </div>
         <div slot="items">
-          <pzsh-menu-dropdown-item href="admin/users" role="button">
+          <pzsh-menu-dropdown-item href="/admin/users" role="button">
             <pzsh-icon name="user"></pzsh-icon>
             {{ t "users" }}
           </pzsh-menu-dropdown-item>
-          <pzsh-menu-dropdown-item href="admin/settings" role="button">
+          <pzsh-menu-dropdown-item href="/admin/settings" role="button">
             <pzsh-icon name="setting"></pzsh-icon>
             {{ t "settings" }}
           </pzsh-menu-dropdown-item>
@@ -102,7 +102,7 @@
         {{ this.givenname }}
       </div>
       <div slot="items">
-        <pzsh-menu-dropdown-item href="profile" role="button">
+        <pzsh-menu-dropdown-item href="/profile" role="button">
           <pzsh-icon name="user"></pzsh-icon>
           {{ t "users" }}
         </pzsh-menu-dropdown-item>
