fix deprecation in changelog

--- a/frontend/app/templates/components/changelog.hbs
+++ b/frontend/app/templates/components/changelog.hbs
@@ -4,7 +4,7 @@
   </Modal.header>
   <Modal.body>
     <div class="container-fluid changelog-container">
-      {{html-safe (markdown-to-html content)}}
+      {{html-safe (markdown-to-html this.content)}}
     </div>
   </Modal.body>
   <Modal.footer>
