--- a/frontend/app/templates/components/folder/form.hbs
+++ b/frontend/app/templates/components/folder/form.hbs
@@ -26,7 +26,7 @@
                               @placeholder={{t "encryptable/credentials.edit.team_placeholder"}}
                               @options={{this.assignableTeams}} @value={{this.changeset.team}}
                               @customError={{t (validation-error-key this.changeset.error.team.validation)}} as |el|>
-                  <el.control class={{if this.changeset.error.team.validation "invalid-input-ps"}}
+                  <el.control id="team-dopdown" class={{if this.changeset.error.team.validation "invalid-input-ps"}}
                               @renderInPlace={{true}} @onChange={{this.setSelectedTeam}} @disabled={{not this.isNewRecord}} as |team|>
                     {{#if team.isPersonalTeam }}
                       {{this.userService.username}}
