--- a/frontend/app/templates/components/encryptable/form.hbs
+++ b/frontend/app/templates/components/encryptable/form.hbs
@@ -38,7 +38,7 @@
               <div class="col-md-6 order-2">
                 <div class="form-group col-md-12" id="team-power-select">
                   <form.element id="encryptable-form-team" @label={{t "team"}} @controlType="power-select"
-                                @options={{this.assignableTeams}} @value={{this.selectedTeam}}
+                                @options={{this.assignableTeams}} @value={{this.changeset.team}}
                                 @customError={{t (validation-error-key this.changeset.error.team.validation)}} as |el|>
                     <el.control class={{if this.changeset.error.team.validation "invalid-input-ps"}} @placeholder={{t
                       "encryptable/credentials.edit.team_placeholder"}}
