add label for description and remove weird margin

--- a/frontend/app/templates/components/encryptable/show.hbs
+++ b/frontend/app/templates/components/encryptable/show.hbs
@@ -35,9 +35,10 @@
     </div>
 
     {{#if @encryptable.description}}
-      <div class="row pb-3">
+      <div class="row">
         <div class="col">
-          <br><p class="text-muted description">{{@encryptable.description}}</p>
+          <div>{{t "description"}}</div>
+          <p class="text-muted description">{{@encryptable.description}}</p>
         </div>
       </div>
     {{/if}}
@@ -83,9 +84,10 @@
     </div>
 
     {{#if @encryptable.description}}
-      <div class="row pb-3">
+      <div class="row">
         <div class="col">
-          <br><p class="text-muted description">{{@encryptable.description}}</p>
+          <div>{{t "description"}}</div>
+          <p class="text-muted description">{{@encryptable.description}}</p>
         </div>
       </div>
     {{/if}}
